--- a/package.json
+++ b/package.json
@@ -23,20 +23,10 @@
     "@typescript-eslint/eslint-plugin": "^5.55.0",
     "@typescript-eslint/parser": "^5.55.0",
     "babel-loader": "^8.2.5",
-    "css-loader": "^6.6.0",
     "eslint": "^8.11.0",
     "html-webpack-plugin": "^5.5.0",
     "inline-chunk-html-plugin": "^1.1.1",
     "path": "^0.12.7",
-    "pug": "^2.0.4",
-    "pug-loader": "^2.4.0",
-    "sass": "^1.49.7",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^3.3.1",
-    "stylelint": "^14.3.0",
-    "stylelint-config-outside-in-order": "^0.1.0",
-    "stylelint-config-recommended-scss": "^5.0.2",
-    "stylelint-scss": "^4.1.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.2",
     "url-loader": "^4.1.1",
@@ -46,6 +36,6 @@
   },
   "dependencies": {
     "@create-figma-plugin/utilities": "^2.4.0",
-    "@figma-plugin/helpers": "^0.15.2",
+    "@figma-plugin/helpers": "^0.15.2"
   }
 }
