--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Multiple Grouper",
+  "name": "Multiple Wrapper",
   "id": "1219008484601651003",
   "api": "1.0.0",
   "main": "dist/code.js",
